[package]
name = "sensor-data"
version = "0.1.0"
authors = ["Rick Winfrey <rewinfrey@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.1"
reduce = "0.1.4"
